k8s/inventory-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: commerceflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: inventory-service
          image: ghcr.io/devgeniussourav/commerceflow-inventory-service:latest
          ports:
            - containerPort: 8083
