k8s/order-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: commerceflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: order-service
          image: ghcr.io/devgeniussourav/commerceflow-order-service:latest
          ports:
            - containerPort: 8082
