k8s/payment-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: commerceflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: payment-service
          image: ghcr.io/devgeniussourav/commerceflow-payment-service:latest
          ports:
            - containerPort: 8084
