k8s/product-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: commerceflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: product-service
          image: ghcr.io/devgeniussourav/commerceflow-product-service:latest
          ports:
            - containerPort: 8081
