k8s/user-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: commerceflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: user-service
          image: ghcr.io/devgeniussourav/commerceflow-user-service:latest
          ports:
            - containerPort: 8084
