k8s/discovery-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  namespace: commerceflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: discovery-server
          image: ghcr.io/devgeniussourav/commerceflow-discovery-server:latest
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
  namespace: commerceflow
spec:
  selector:
    app: discovery-server
  ports:
    - port: 8761
      targetPort: 8761
