k8s/gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: commerceflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: gateway-service
          image: ghcr.io/devgeniussourav/commerceflow-gateway-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: commerceflow
spec:
  type: NodePort
  selector:
    app: gateway-service
  ports:
    - port: 8080
      targetPort: 8080
