k8s/inventory-service.yml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: commerceflow
spec:
  selector:
    app: inventory-service
  ports:
    - port: 8083
      targetPort: 8083
