k8s/order-service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: commerceflow
spec:
  selector:
    app: order-service
  ports:
    - port: 8082
      targetPort: 8082
