k8s/payment-service.yml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: commerceflow
spec:
  selector:
    app: payment-service
  ports:
    - port: 8084
      targetPort: 8084
