k8s/product-service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: commerceflow
spec:
  selector:
    app: product-service
  ports:
    - port: 8081
      targetPort: 8081
