k8s/user-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: commerceflow
spec:
  selector:
    app: user-service
  ports:
    - port: 8084
      targetPort: 8084
